--- a/admin/package.json
+++ b/admin/package.json
@@ -9,9 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
-    "ckeditor4-react": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "sass": "^1.49.11",
