--- a/be/tsconfig.json
+++ b/be/tsconfig.json
@@ -4,13 +4,11 @@
         "noImplicitAny": false,
         "noEmitOnError": true,
         "removeComments": false,
-        "sourceMap": true,
+        "sourceMap": false,
         "target": "es5",
         "outDir": "dist",
         "downlevelIteration": true,
         "esModuleInterop": true,
-        "module": "amd",
-        "outFile": "./out.js",
         "moduleResolution": "Node"
     },
 }
